[gd_scene load_steps=14 format=3 uid="uid://ddtoo50h1mo73"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_50rbg"]
[ext_resource type="Texture2D" uid="uid://dejh6ko2enhhr" path="res://с флешки/idle.png" id="2_fu0e7"]

[sub_resource type="Animation" id="Animation_6sj0u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_uhrq7"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.2, 0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(0, 3), Vector2i(0, 3), Vector2i(0, 3), Vector2i(0, 3), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_46765"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_cx58h"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_fnc7h"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b7lf8"]
_data = {
"RESET": SubResource("Animation_6sj0u"),
"walkDown": SubResource("Animation_uhrq7"),
"walkLeft": SubResource("Animation_46765"),
"walkRight": SubResource("Animation_cx58h"),
"walkUp": SubResource("Animation_fnc7h")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bf1x4"]
size = Vector2(12, 4)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r8wpi"]
radius = 7.0
height = 14.0

[sub_resource type="Animation" id="Animation_2p8de"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_g38i3"]
resource_name = "Моргание"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.478431), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nq2ar"]
_data = {
"RESET": SubResource("Animation_2p8de"),
"Моргание": SubResource("Animation_g38i3")
}

[node name="player" type="CharacterBody2D"]
light_mask = 3
visibility_layer = 3
z_index = 1
y_sort_enabled = true
script = ExtResource("1_50rbg")
knockbackPower = 500

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
y_sort_enabled = true
position = Vector2(-19, -12)
scale = Vector2(1.07883, 0.991837)
texture = ExtResource("2_fu0e7")
offset = Vector2(2.08165e-12, -8)
hframes = 7
vframes = 6

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -16.6848
offset_top = -28.2304
offset_right = 23.3152
offset_bottom = 11.7696
color = Color(1, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b7lf8")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_bf1x4")

[node name="hurtBox" type="Area2D" parent="."]
visibility_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_r8wpi")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nq2ar")
}

[node name="hurtTimer" type="Timer" parent="."]

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="hurtBox" to="." method="_on_hurt_box_area_exited"]
